# teamspeak-summary

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  build.sh  build_simple.bat
src/: plugin.c  plugin.h
